kube/deploy/apps/piped/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalidraw
  namespace: excalidraw
  annotations:
    external-dns.alpha.kubernetes.io/target: "${DNS_CF}"
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8,172.16.0.0/12,192.168.0.0/16,100.64.0.0/10
spec:
  ingressClassName: nginx-external
  rules:
  - host: &host "${APP_DNS_PIPED_BACKEND:=piped-backend}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: piped-backend
            port:
              number: 8080
  tls:
  - hosts:
    - draw.jjg.gg
status:
  loadBalancer:
    ingress:
    - ip: 10.12.34.80
